# xrally-kubernetes

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
docs/source/: kubernetes.md  kubernetes.rst
samples/platform/: apikey-spec.json  apikey-spec.yaml  cert-spec.json  cert-spec.yaml
samples/scenario/: create-and-delete-deployment.json  create-and-delete-deployment.yaml  create-and-delete-emptydir-volume.json  create-and-delete-emptydir-volume.yaml  create-and-delete-job.json  create-and-delete-job.yaml  create-and-delete-namespace.json  create-and-delete-namespace.yaml  create-and-delete-pod-with-configmap-volume.json  create-and-delete-pod-with-configmap-volume.yaml  create-and-delete-pod-with-emptydir-volume.json  create-and-delete-pod-with-emptydir-volume.yaml  create-and-delete-pod-with-hostpath-volume.json  create-and-delete-pod-with-hostpath-volume.yaml  create-and-delete-pod-with-local-persistent-volume.json  create-and-delete-pod-with-local-persistent-volume.yaml  create-and-delete-pod-with-secret-volume.json  create-and-delete-pod-with-secret-volume.yaml  create-and-delete-pod.json  create-and-delete-pod.yaml  create-and-delete-replicaset.json  create-and-delete-replicaset.yaml  create-and-delete-replication-controller.json  create-and-delete-replication-controller.yaml  create-and-delete-statefulset.json  create-and-delete-statefulset.yaml  (+30 more)
tests/ci/: run_task.sh
xrally_kubernetes/: README.md  __init__.py  kubernetesclient.py  service.py
xrally_tasks/: all-in-one.yaml
(+46 files in other folders)
