[metadata]
name = xrally-kubernetes
summary = xRally plugins for Kubernetes platform
description-file =
    README.md
author = xRally Team
author-email = noreply@xrally.xyz
home-page = https://docs.openstack.org/rally/latest/
license = Apache License, Version 2.0
classifier =
    Environment :: Kubernetes
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    xrally_kubernetes

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
rally_plugins =
    path = xrally_kubernetes

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
